--- a/Manipulating the DOM/index.html
+++ b/Manipulating the DOM/index.html
@@ -16,7 +16,7 @@
       <li><input> Code</li>
     </ul>
     <div class="extra">
-      <p>This is extra content you need to delete.</p>
+      <p>This is content you can delete.</p>
     </div>
   </div>
   <script src="js/scripts.js"></script>
